# audime

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SKILL.md  docker-compose.yml  hash.py  ler_fatura.py  main.py  opencode.json  package-lock.json  package.json  pyproject.toml  requirements.txt  s3utils.py  scripts.sql  tsconfig.json  turbo.json  user.py
.agents/agents/: aprendiz.md  especulador.md  loopback.md  seguranca.md
.agents/state/: lessons.md
.opencode/agents/: aprendiz.md  especulador.md  explicador.md  loopback.md  questionador.md  seguranca.md  validador.md
abstract/: engine.py  pyproject.toml
abstract/models/: __init__.py  analytics.py  auth.py  core.py  raw.py  staging.py
app/: main.py
app/core/: config.py  deps.py
app/services/: auth_service.py  extracao_service.py  parser_nfce.py  storage_service.py
apps/api/: README.md  build.js  index.ts  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
apps/web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
arquitetura/: backend.md
database/: __init__.py  base.py  engine.py
database/models/: __init__.py  analytics.py  core.py  extracao.py  raw.py  staging.py  usuario.py  (+1 more)
docs/: PRD.md  banco-de-dados.md
extracao/: execucao.py  extrair_nota.py
flows/: upload.md
tests/: conftest.py  test_auth_flow.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
workers/: transform_pipeline.py
workflows/: api-build.sh  api-start.sh
(+62 files in other folders)
