[project]
name = "audime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "boto3>=1.43.36",
    "fastapi>=0.138.0",
    "msoffcrypto-tool>=6.0.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
